# gl-render-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: camera.c  camera.h  glh.h  light.h  main.c  material.h  mesh.c  mesh.h  model.c  model.h  shader.c  shader.h  texture.c  texture.h  vao.c  vao.h  vbo.c  vbo.h
src/shaders/: shader.fs  shader.vs
